k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonapp-deployment
  labels:
    app: pythonapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pythonapp
  template:
    metadata:
      labels:
        app: pythonapp
    spec:
      containers:
      - name: pythonapp
        image: egartin/pythonapp:v2
        ports:
        - containerPort: 5000
