k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonapp-service
  labels:
    app: pythonapp
spec:
  selector:
    app: pythonapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
  type: ClusterIP
