k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonapp-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "pythonapp.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pythonapp-service
            port:
              number: 8080
